snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.jar.sha256
ca2e7cf4c2fdbacf6ad4889e4b007c97cd56a3025771d8dd02c3c21c8b989b3e